<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.appodeal.test.nativead.NativeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="350dp" />

        <Button
            android:id="@+id/show_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_native"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/hide_native"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_native"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/show_native" />

        <Button
            android:id="@+id/show_in_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_in_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hide_native" />

        <com.appodeal.ads.native_ad.views.NativeAdViewNewsFeed
            android:id="@+id/native_ad_view_news_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/show_in_list" />

        <com.appodeal.ads.native_ad.views.NativeAdViewAppWall
            android:id="@+id/native_ad_view_app_wall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/native_ad_view_news_feed" />

        <com.appodeal.ads.native_ad.views.NativeAdViewContentStream
            android:id="@+id/native_ad_view_content_stream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/native_ad_view_app_wall" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>